tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.stderr
error[E0412]: cannot find type `ExtMuxCascadedMuxAIndex` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:189:39
    |
189 |     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxAIndex, CanError> {
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^
...
299 | pub enum ExtMuxCascadedMuxedA2MuxBIndex {
    | --------------------------------------- similarly named enum `ExtMuxCascadedMuxedA2MuxBIndex` defined here
    |
help: an enum with a similar name exists
    |
189 -     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxAIndex, CanError> {
189 +     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxedA2MuxBIndex, CanError> {
    |
help: you might be missing a type parameter
    |
 65 | impl<ExtMuxCascadedMuxAIndex> ExtMuxCascaded {
    |     +++++++++++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtMuxCascadedMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:193:49
    |
 53 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
193 |                     ExtMuxCascadedMuxAIndex::M0(ExtMuxCascadedMuxAM0 {
    |                                                 ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0422]: cannot find struct, variant or union type `ExtMuxCascadedMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:200:49
    |
 53 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
200 |                     ExtMuxCascadedMuxAIndex::M1(ExtMuxCascadedMuxAM1 {
    |                                                 ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0412]: cannot find type `ExtMuxCascadedMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:234:37
    |
 53 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
234 |     pub fn set_m0(&mut self, value: ExtMuxCascadedMuxAM0) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0412]: cannot find type `ExtMuxCascadedMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:243:37
    |
 53 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
243 |     pub fn set_m1(&mut self, value: ExtMuxCascadedMuxAM1) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:234:5
    |
152 | /     pub fn set_m0(
153 | |         &mut self,
154 | |         value: ExtMuxCascadedMuxedA2MuxBM0,
155 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m0`
...
234 |       pub fn set_m0(&mut self, value: ExtMuxCascadedMuxAM0) -> Result<(), CanError> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:243:5
    |
164 | /     pub fn set_m1(
165 | |         &mut self,
166 | |         value: ExtMuxCascadedMuxedA2MuxBM1,
167 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m1`
...
243 |       pub fn set_m1(&mut self, value: ExtMuxCascadedMuxAM1) -> Result<(), CanError> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m1`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:126:46
    |
126 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxCascadedMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:193:21
    |
193 |                     ExtMuxCascadedMuxAIndex::M0(ExtMuxCascadedMuxAM0 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxCascadedMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxCascadedMuxedA2MuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxCascadedMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:200:21
    |
200 |                     ExtMuxCascadedMuxAIndex::M1(ExtMuxCascadedMuxAM1 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxCascadedMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxCascadedMuxedA2MuxBIndex`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:208:46
    |
208 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`
